<resources>
    <string name="app_name">Пчелка</string>
    <string name="select_service"> Выберите услугу</string>
    <string name="approx_cash"> Планируемый бюджет</string>
    <string name="phone_number"> Номер телефона</string>
    <string name="request_address"> Ваш адрес</string>
    <string name="request_desc"> Опишите, что вы хотите сделать*</string>
    <string name="send_button"> Заказать услугу</string>
    <string name="user_agreement"> Я согласен(-сна) с Пользовательским соглашением </string>
    <string name="user_agreement_header">Пользовательское соглашение</string>
    <string name="username">Ваше имя </string>
    <string name="verification_code">Полученный код </string>
    <string name="verification_text">Регистрация успешно пройдена! Введите Ваше имя и полученный код через смс.</string>
    <string name="login">Войти</string>
    <string name="client_price">Моя ставка:</string>
    <string name="leave_the_city">Выезд по городу:</string>
    <string name="client_price_score">Итог:</string>
    <string name="up_rate">Повысить ставку </string>
    <string name="address_tv_str">Адрес:</string>
    <string name="cash_tv_str">Бюджет:</string>
    <string name="phone_tv_str">Телефон:</string>
</resources>