<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@id/fragment_new_request"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.kg.vista.beeserviceclient.fragment.NewRequestFragment">


        <EditText
            android:id="@id/user_new_select_category"
            style="@style/NewRequestFragmentETStyle"
            android:layout_alignEnd="@+id/user_new_request_desc"
            android:layout_alignLeft="@+id/user_new_request_desc"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/user_new_request_desc"
            android:layout_alignStart="@+id/user_new_request_desc"
            android:layout_marginTop="15dp"
            android:background="@drawable/main_otherbuttons_corners"
            android:clickable="true"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/box_service"
            android:drawableRight="@drawable/box_service"
            android:ems="5"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/select_service"
            android:inputType="textPersonName"
            android:onClick="chooseCategory"
            android:paddingLeft="12dp"
            android:textColor="@color/colorEditText" />

        <EditText
            android:id="@id/user_new_request_desc"
            android:layout_width="309dp"
            android:layout_height="160dp"
            android:layout_below="@+id/user_new_select_category"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/main_inputmulti_corner"
            android:ems="5"
            android:gravity="top"
            android:hint="@string/request_desc"
            android:inputType="textMultiLine"
            android:paddingLeft="12dp"
            android:textColor="@color/colorEditText" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_new_request_send_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:paddingLeft="12dp"
            android:text="@string/user_agreement"
            android:textColor="@color/colorEditText" />

        <EditText
            android:id="@id/user_new_approx_cash"
            style="@style/NewRequestFragmentETStyle"
            android:layout_alignLeft="@+id/user_new_request_desc"
            android:layout_alignStart="@+id/user_new_request_desc"
            android:layout_below="@+id/user_new_request_desc"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/approx_cash"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/approx_cash"
            android:ems="5"
            android:hint="@string/approx_cash"
            android:inputType="numberSigned"
            android:textColor="@color/colorEditText" />

        <EditText
            android:id="@id/user_request_address"
            style="@style/NewRequestFragmentETStyle"
            android:layout_alignEnd="@+id/user_new_approx_cash"
            android:layout_alignLeft="@+id/user_new_approx_cash"
            android:layout_alignRight="@+id/user_new_approx_cash"
            android:layout_alignStart="@+id/user_new_approx_cash"
            android:layout_below="@+id/user_new_approx_cash"
            android:drawableLeft="@drawable/address"
            android:drawablePadding="8dp"
            android:ems="5"
            android:hint="@string/request_address"
            android:inputType="textPersonName" />

        <EditText
            android:id="@id/user_new_request_phone_number"
            style="@style/NewRequestFragmentETStyle"
            android:layout_alignLeft="@+id/user_request_address"
            android:layout_alignStart="@+id/user_request_address"
            android:layout_below="@+id/user_request_address"
            android:drawableLeft="@drawable/phone_icon"
            android:drawablePadding="8dp"
            android:ems="5"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@color/colorEditText" />

        <Button
            android:id="@id/user_new_request_send_button"
            style="@style/NewRequestFragmentETStyle"
            android:layout_alignLeft="@id/user_new_request_phone_number"
            android:layout_alignStart="@id/user_new_request_phone_number"
            android:layout_below="@id/user_new_request_phone_number"
            android:background="@color/colorPrimary"
            android:text="@string/send_button" />


    </RelativeLayout>

</ScrollView>