<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.kg.vista.beeservice.activity.LoginActivity"
    android:layout_width="match_parent">


    <EditText

        android:layout_width="320dp"
        android:layout_height="40dp"
        android:background="@drawable/login_button_roundcorner"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:ems="10"
        android:id="@+id/middleware_name"
        android:layout_marginTop="215dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/verification_text"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:textSize="19dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_marginBottom="49dp"
        android:id="@id/middleware_heading_text"
        android:layout_alignBottom="@+id/middleware_name"
        android:layout_alignLeft="@+id/middleware_name"
        android:layout_alignStart="@+id/middleware_name"
        android:layout_alignRight="@+id/middleware_name"
        android:layout_alignEnd="@+id/middleware_name" />

    <EditText
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:padding="10dp"
        android:inputType="text"
        android:background="@drawable/login_button_roundcorner"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:hint="@string/verification_code"
        android:ems="10"
        android:layout_below="@id/middleware_heading_text"
        android:layout_alignLeft="@+id/middleware_name"
        android:layout_alignStart="@+id/middleware_name"
        android:layout_marginTop="11dp"
        android:id="@+id/verification_code"
        android:layout_alignRight="@+id/middleware_name"
        android:layout_alignEnd="@+id/middleware_name" />

    <Button
        android:text="@string/login"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/main_inputmulti_corner"
        android:clickable="true"
        android:id="@id/middleware_button"
        android:layout_below="@+id/verification_code"
        android:layout_alignLeft="@+id/verification_code"
        android:layout_alignStart="@+id/verification_code" />


</RelativeLayout>