<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    android:tag="cards main container">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="0dp"
                android:text="Описание"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="@dimen/detail_margin_left"
                android:layout_marginRight="@dimen/detail_margin_right"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@id/description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="@dimen/detail_margin_left"
                android:layout_marginRight="@dimen/detail_margin_right"
                android:layout_marginTop="10dp"
                android:layout_weight="0.33"
                android:text="Description"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <TextView
                android:id="@id/cash_tv"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginLeft="@dimen/detail_margin_left"
                android:layout_marginRight="@dimen/detail_margin_right"
                android:layout_marginTop="20dp"
                android:text="@string/cash_tv_str"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@id/address_tv"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginLeft="@dimen/detail_margin_left"
                android:layout_marginRight="@dimen/detail_margin_right"
                android:layout_marginTop="10dp"
                android:text="@string/address_tv_str"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@id/phone_tv"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginLeft="@dimen/detail_margin_left"
                android:layout_marginRight="@dimen/detail_margin_right"
                android:layout_marginTop="10dp"
                android:text="@string/phone_tv_str"
                android:textAppearance="?android:attr/textAppearanceMedium" />


        </LinearLayout>


        <TextView
            android:id="@id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="150dp"
            android:layout_marginTop="123dp"
            android:text="@string/app_name"
            android:textSize="18sp" />

        <TextView
            android:id="@id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignLeft="@+id/price"
            android:layout_alignStart="@+id/price"
            android:layout_below="@+id/price"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="162dp"
            android:text="@string/app_name"
            android:textSize="18sp" />

        <TextView
            android:id="@id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="150dp"
            android:layout_marginTop="203dp"
            android:text="@string/app_name"
            android:textSize="18sp" />


    </android.support.v7.widget.CardView>


</RelativeLayout>
