<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    android:tag="cards main container">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"

        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"


                android:layout_marginTop="0dp"
                android:text="Описание"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="305dp"
                android:layout_height="53dp"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="Description"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:text="@string/client_price"
                android:layout_width="115dp"
                android:layout_height="19dp"
                android:id="@+id/textView"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:text="@string/leave_the_city"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:id="@+id/textView5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="0.07" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="205dp"
            android:orientation="vertical"
            android:weightSum="1">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

            </LinearLayout>

            <TextView
                android:text="@string/client_price_score"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"

                />

            <Button
                android:text="@string/up_rate"
                android:layout_width="189dp"
                android:layout_height="34dp"
                android:layout_marginLeft="120dp"
                android:layout_marginStart="120dp"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                android:background="@drawable/up_rate_button_style"
                android:id="@+id/button2" />
        </LinearLayout>


    </android.support.v7.widget.CardView>




</RelativeLayout>


